// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInputFeedback component Snapshots When has "invalid" state matches 1`] = `
<div
  class="invalidFeedback"
/>
`;

exports[`FormInputFeedback component Snapshots When has "valid" state matches 1`] = `
<div
  class="validFeedback"
/>
`;

exports[`FormInputFeedback component Snapshots matches 1`] = `
<div
  class=""
/>
`;
